--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ frontend/node_modules
 frontend/.pnp
 frontend/.pnp.js
 admin/.env
-admin/.db-data
-main/.db-data
+admin/.db-data/
+main/.db-data/
 main/.env
 
 # testing
